tests/errors/undeclared_variable.drast
// # TEST: undeclared variable is rejected
// # EXPECT: error
// # ERROR_CONTAINS: undeclared

main, int
	return missingValue
